@@ -1,5 +1,12 @@
 2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>
 
+	* gcc.target/powerpc/fold-vec-pack-double.c: New.
+	* gcc.target/powerpc/fold-vec-pack-int.c: New.
+	* gcc.target/powerpc/fold-vec-pack-longlong.c: New.
+	* gcc.target/powerpc/fold-vec-pack-short.c: New.
+
+2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
 	* gcc.target/powerpc/fold-vec-msum-char.c: New.
 	* gcc.target/powerpc/fold-vec-msum-short.c: New.
 
